--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ericdallo</groupId>
+  <groupId>com.github.ericdallo</groupId>
   <artifactId>clipure</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
-  <name>ericdallo/clipure</name>
+  <version>0.0.1</version>
+  <name>clipure</name>
   <description>FIXME: my new application.</description>
   <url>https://github.com/ericdallo/clipure</url>
   <licenses>
@@ -22,7 +22,7 @@
     <url>https://github.com/ericdallo/clipure</url>
     <connection>scm:git:git://github.com/ericdallo/clipure.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/ericdallo/clipure.git</developerConnection>
-    <tag>v0.1.0-SNAPSHOT</tag>
+    <tag>0.0.1</tag>
   </scm>
   <dependencies>
     <dependency>
@@ -31,14 +31,14 @@
       <version>1.11.1</version>
     </dependency>
     <dependency>
-      <groupId>org.clojure</groupId>
-      <artifactId>core.async</artifactId>
-      <version>1.5.648</version>
-    </dependency>
-    <dependency>
       <groupId>cljfx</groupId>
       <artifactId>cljfx</artifactId>
       <version>1.7.22</version>
+    </dependency>
+    <dependency>
+      <groupId>org.clojure</groupId>
+      <artifactId>core.async</artifactId>
+      <version>1.5.648</version>
     </dependency>
   </dependencies>
   <build>
@@ -58,6 +58,11 @@
       </plugin>
     </plugins>
     <sourceDirectory>src</sourceDirectory>
+    <resources>
+      <resource>
+        <directory>resources</directory>
+      </resource>
+    </resources>
   </build>
   <repositories>
     <repository>
