--- a/resources/META-INF/native-image/clipure/clipure/native-image.properties
+++ b/resources/META-INF/native-image/clipure/clipure/native-image.properties
@@ -1,5 +1,6 @@
 Args=-J-Dclojure.compiler.direct-linking=true \
      -J-Dclojure.spec.skip-macros=true \
+     -Djava.awt.headless=false
      -J-Dcljfx.skip-javafx-initialization=true \
      -H:+InlineBeforeAnalysis \
      -H:Log=registerResource: \
