Improve graal config

--- a/resources/META-INF/native-image/clipure/clipure/native-image.properties
+++ b/resources/META-INF/native-image/clipure/clipure/native-image.properties
@@ -1,7 +1,7 @@
 Args=-J-Dclojure.compiler.direct-linking=true \
      -J-Dclojure.spec.skip-macros=true \
      -Djava.awt.headless=false
-     -J-Dcljfx.skip-javafx-initialization=true \
+     -H:-CheckToolchain \
      -H:+InlineBeforeAnalysis \
      -H:Log=registerResource: \
      -H:IncludeResources=\"CLIPURE_VERSION\" \
